Create JPARepositories dynamically with Factory (#22)
* make static

* working module

* cleanup

* working example dynamic jpa

* fully working example of dynmic jpa

* perfectly working

* cleanup

* cleanup

* register bean if not exists

* fixing tests

Co-authored-by: paawak <paawak@paawak-latitude-3510>